修改一些项目初始化的错误； 配置了统一异常处理； 完成商品类别查询功能；

--- a/ly-gateway/src/main/resources/application.yaml
+++ b/ly-gateway/src/main/resources/application.yaml
@@ -41,3 +41,18 @@ ribbon:
   # 切换服务重试次数
   MaxAutoRetriesNextServer: 0
 
+leyou:
+  cors:
+    allowedOrigins:
+      - http://manage.leyou.com
+    allowCredentials: true
+    allowedMethods:
+      - GET
+      - POST
+      - DELETE
+      - PUT
+      - OPTIONS
+    maxAge: 3600
+    filterPath: /**
+    allowedHeaders:
+      - "*"
