--- a/ly-item/pom.xml
+++ b/ly-item/pom.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>leyou</artifactId>
-        <groupId>com.ly.parent</groupId>
+        <groupId>com.leyou</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
+
+    <groupId>com.leyou.service</groupId>
+    <artifactId>ly-item</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ly-item-pojo</module>
         <module>ly-item-service</module>
     </modules>
+    <packaging>pom</packaging>
 
-    <groupId>com.ly.service</groupId>
-    <artifactId>ly-item</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
 
 
 </project>
