--- a/ly-registry/pom.xml
+++ b/ly-registry/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>leyou</artifactId>
-        <groupId>com.ly.parent</groupId>
+        <groupId>com.leyou</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ly.common</groupId>
+    <groupId>com.leyou.common</groupId>
     <artifactId>ly-registry</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -19,7 +19,6 @@
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -28,5 +27,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
