--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>ly-registry</module>
         <module>ly-gateway</module>
-        <module>ly-item</module>
         <module>ly-item</module>
         <module>ly-common</module>
     </modules>
@@ -16,8 +15,8 @@
         <version>2.0.6.RELEASE</version>
         <relativePath/>
     </parent>
-
-    <groupId>com.ly.parent</groupId>
+    
+    <groupId>com.leyou</groupId>
     <artifactId>leyou</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
