--- a/ly-registry/src/main/resources/application.yaml
+++ b/ly-registry/src/main/resources/application.yaml
@@ -15,6 +15,8 @@ eureka:
     # 注册中心地址
     service-url:
       defaultZone: http://127.0.0.1:10086/eureka
+    server:
+      enableSelfPreservation: flase
 
 spring:
   application:
