--- a/ly-item/ly-item-pojo/pom.xml
+++ b/ly-item/ly-item-pojo/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>mapper-core</artifactId>
             <version>1.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.7</version>
+        </dependency>
     </dependencies>
 
 </project>
