--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>ly-gateway</module>
         <module>ly-item</module>
         <module>ly-common</module>
+        <module>ly-upload</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -31,7 +32,7 @@
         <mysql.version>5.1.46</mysql.version>
         <pageHelper.starter.version>1.2.5</pageHelper.starter.version>
         <leyou.latest.version>1.0.0-SNAPSHOT</leyou.latest.version>
-        <fastDFS.client.version>1.26.1-RELEASE</fastDFS.client.version>
+        <fastDFS.client.version>1.26.5</fastDFS.client.version>
     </properties>
 
     <dependencyManagement>
